fix(wizard): redesign wizard stepnav (add success icon and align states) (#1478)
- The step number is not removed for steps with error status.
- An icon, in addition to color, is used to show wizard step completed
status.
- The hover and active states use correct text colors.
- The stepnav item does not have padding resulting in the button (and
thus the hover, active, and selected background colors) not to be
surrounded by padding.

CDE-2229, VPAT-776

--- a/projects/angular/src/wizard/_variables.wizard.scss
+++ b/projects/angular/src/wizard/_variables.wizard.scss
@@ -15,7 +15,10 @@ $clr-wizard-main-text-color: var(--clr-wizard-main-text-color) !default;
 
 $clr-wizard-stepnav-bgcolor: var(--clr-wizard-stepnav-bgcolor) !default;
 $clr-wizard-stepnav-text: var(--clr-wizard-stepnav-text) !default;
+$clr-wizard-stepnav-text-active: var(--clr-wizard-stepnav-text-active) !default;
+$clr-wizard-stepnav-text-hover: var(--clr-wizard-stepnav-text-hover) !default;
 $clr-wizard-stepnav-text--active: var(--clr-wizard-stepnav-text--active) !default;
+$clr-wizard-stepnav-text-disabled: var(--clr-wizard-stepnav-text-disabled) !default;
 $clr-wizard-stepnav-border-color: var(--clr-wizard-stepnav-border-color) !default;
 $clr-wizard-stepnav-border-size: var(--clr-wizard-stepnav-border-size) !default;
 $clr-wizard-stepnav-item-border-color: var(--clr-wizard-stepnav-item-border-color) !default;
@@ -25,6 +28,7 @@ $clr-wizard-stepnav-selected-bgcolor: var(--clr-wizard-stepnav-selected-bgcolor)
 $clr-wizard-stepnav-selected-hover-bgcolor: var(--clr-wizard-stepnav-selected-hover-bgcolor) !default;
 $clr-wizard-stepnav-selected-active-bgcolor: var(--clr-wizard-stepnav-selected-active-bgcolor) !default;
 $clr-wizard-stepnav-link-error-icon-color: var(--clr-wizard-stepnav-link-error-icon-color) !default;
+$clr-wizard-stepnav-link-complete-icon-color: var(--clr-wizard-stepnav-link-complete-icon-color) !default;
 $clr-wizard-stepnav-item-error-border-color: var(--clr-wizard-stepnav-item-error-border-color) !default;
 $clr-wizard-stepnav-link-hover-bg-color: var(--clr-wizard-stepnav-link-hover-bg-color) !default;
 $clr-wizard-stepnav-link-active-bg-color: var(--clr-wizard-stepnav-link-active-bg-color) !default;
